- Add display flex and height 100% to ModalDialog internal wrapper div. This ensures that it takes up the whole height of the dialog on mobile, so that inner elements can be positioned with fixed within the modal. - Add contentWrapperStyle to useDialog options, complementing contentWrapperClassName.

--- a/packages/modal/src/dialog/modal/ModalDialog.module.css
+++ b/packages/modal/src/dialog/modal/ModalDialog.module.css
@@ -85,3 +85,8 @@
     }
   }
 }
+
+.contentWrapper {
+  display: flex;
+  height: 100%;
+}
